--- a/templates/main.html
+++ b/templates/main.html
@@ -49,6 +49,10 @@
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated" id="progressbar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">0%</div>
             </div>
+            <br>
+            <div id="current_status">
+                <h5 id="current_status_text">Click on Convert</h5>
+            </div>
         </form>
         </div>
         
